--- a/templates/channels/channels_style.css
+++ b/templates/channels/channels_style.css
@@ -2,6 +2,7 @@
 {
     border-right-style: solid;
     border-right-color: gray;
+    background-color: black;
 }
 
 #channels *
