--- a/templates/stories/stories_style.css
+++ b/templates/stories/stories_style.css
@@ -31,6 +31,5 @@
 /* Title */
 .story > a:nth-child(4)
 {
-    font-size: 18pt;
-    border-right: 2px solid gray;
+    font-size: 16pt;
 }
